--- a/src/pages/App.css
+++ b/src/pages/App.css
@@ -43,9 +43,10 @@
     border-bottom: 1px solid #30373d;
 }
 
-.rawHtml > div > .number {
+.htmlNumbers .number {
     width: 36px;
     color: #465059;
     flex-shrink: 0;
     user-select: none;
+
 }
